Tidy up symbols and code elements